Improved /users, /projects endpoints, added support to 404 for update operations, enhanced OpenAPI definition
